--- a/project/project.vcxproj
+++ b/project/project.vcxproj
@@ -318,7 +318,7 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\file\進度.xlsx" />
+    <None Include="..\進度.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
