--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,9 @@ cmake_minimum_required( VERSION 2.8 )
 # Create Project
 project( solution )
 add_executable( project main.cpp )
+
 set_property( DIRECTORY PROPERTY VS_STARTUP_PROJECT project )
- 
+
 # Find Packages
 find_package( PCL 1.8 REQUIRED )
  
@@ -12,6 +13,7 @@ if( PCL_FOUND )
   # Additional Include Directories
   # [CC++][General][Additional Include Directories]
   include_directories( ${PCL_INCLUDE_DIRS} )
+  include_directories( include )
  
   # Preprocessor Definitions
   # [CC++][Preprocessor][Preprocessor Definitions]
@@ -21,6 +23,7 @@ if( PCL_FOUND )
   # Additional Library Directories
   # [Linker][General][Additional Library Directories]
   link_directories( ${PCL_LIBRARY_DIRS} )
+  link_directories( lib )
  
   # Additional Dependencies
   # [Linker][Input][Additional Dependencies]
