--- a/RAYZ_Project/project.vcxproj.filters
+++ b/RAYZ_Project/project.vcxproj.filters
@@ -4,6 +4,9 @@
     <ClCompile Include="C:\Users\User\Google 雲端硬碟\筆電桌面\DataStructure_Final\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\include\viewer.cpp">
+      <Filter>Include</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="C:\Users\User\Google 雲端硬碟\筆電桌面\DataStructure_Final\CMakeLists.txt" />
@@ -12,8 +15,16 @@
     <Filter Include="Source Files">
       <UniqueIdentifier>{1BC38DAD-80F2-3EE0-8334-1B654A663B8E}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Include">
+      <UniqueIdentifier>{16adc1c1-03c6-44f6-a091-c7c7da23cd51}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\file\進度.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\include\viewer.h">
+      <Filter>Include</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
