--- a/XIAO_Project/project.vcxproj
+++ b/XIAO_Project/project.vcxproj
@@ -309,6 +309,7 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\include\sphere.cpp" />
     <ClCompile Include="..\include\viewer.cpp" />
     <ClCompile Include="C:\Users\XIAO\OneDrive\文件\c\DataStructure_Final\main.cpp" />
   </ItemGroup>
@@ -322,6 +323,7 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     <None Include="..\file\進度.md" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\sphere.h" />
     <ClInclude Include="..\include\viewer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
