--- a/RAYZ_Project/project.vcxproj
+++ b/RAYZ_Project/project.vcxproj
@@ -313,6 +313,7 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\include\queue.cpp" />
     <ClCompile Include="..\include\sphere.cpp" />
     <ClCompile Include="..\include\viewer.cpp" />
     <ClCompile Include="C:\Users\User\Google 雲端硬碟\筆電桌面\DataStructure_Final\main.cpp" />
