--- a/XIAO_Project/project.vcxproj.filters
+++ b/XIAO_Project/project.vcxproj.filters
@@ -1,36 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="C:\Users\XIAO\OneDrive\文件\c\DataStructure_Final\main.cpp">
+    <ClCompile Include="C:\Users\wesdx\OneDrive\文件\c\DataStructure_Final\main.cpp">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\include\sphere.cpp">
-      <Filter>include</Filter>
-    </ClCompile>
-    <ClCompile Include="..\include\viewer.cpp">
-      <Filter>include</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="C:\Users\XIAO\OneDrive\文件\c\DataStructure_Final\CMakeLists.txt" />
+    <CustomBuild Include="C:\Users\wesdx\OneDrive\文件\c\DataStructure_Final\CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
-      <UniqueIdentifier>{1DE4D956-2079-3344-BBD9-3E8502ADA638}</UniqueIdentifier>
+      <UniqueIdentifier>{AB7487A4-6BCC-3026-830D-AF6FB339D5EE}</UniqueIdentifier>
     </Filter>
-    <Filter Include="include">
-      <UniqueIdentifier>{dc3d6ec1-db7d-43ff-8291-bbc1b816705a}</UniqueIdentifier>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\include\sphere.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\viewer.h">
-      <Filter>include</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\file\進度.md" />
   </ItemGroup>
 </Project>
